fixed algos, added tests